@startuml
!theme vibrant
title StreamHub - Class Diagram

class BaseEntity {
  #createdAt : Instant
  #updatedAt : Instant
}

class User {
  -id : UUID
  -email : String
  -name : String
  -password : String
  -enable : boolean
  -provider : Provider
}

class Role {
  -id : UUID
  -name : String
}

class Video {
  -videoId : String
  -title : String
  -contentType : String
  -filePath : String
  -viewCount : long
}

class Category {
  -id : String
  -name : String
  -slug : String
}

class Comment {
  -id : String
  -text : String
}

class Feedback {
  -id : String
  -message : String
}

class RefreshToken {
  -id : UUID
  -jti : String
  -expiresAt : Instant
  -revoked : boolean
}

class VideoView {
  -viewerIp : String
  -viewedAt : Instant
}

class AuthController
class AuthService {
  <<interface>>
}
class AuthServiceImpl
class JwtService
class OtpService

class VideoController
class VideoService {
  <<interface>>
}
class VideoServiceImpl

class UserController
class UserService {
  <<interface>>
}
class UserServiceImpl

class AdminController
class AdminService {
  <<interface>>
}
class AdminServiceImpl

class CommentController
class CategoryController
class FeedbackController

class JwtAuthenticationFilter
class CustomUserDetailsService

' --- Implementations implement interfaces ---
AuthServiceImpl ..|> AuthService
UserServiceImpl ..|> UserService
VideoServiceImpl ..|> VideoService
AdminServiceImpl ..|> AdminService

' --- Controllers depend on Services ---
AuthController --> AuthService
AuthController --> JwtService
AuthController --> OtpService
UserController --> UserService
VideoController --> VideoService
AdminController --> AdminService

' --- Entity inheritance from BaseEntity ---
BaseEntity <|-- User
BaseEntity <|-- Video
BaseEntity <|-- Category
BaseEntity <|-- Comment
BaseEntity <|-- Feedback
BaseEntity <|-- RefreshToken

' --- Entity relationships ---
User "1" --> "0..*" Video : uploads
User "1" --> "0..*" Comment : writes
Video "1" --> "0..*" Comment : contains
Video "1" --> "0..*" VideoView : receives
User "1" --> "0..*" RefreshToken : owns
User "1" --> "0..*" Role : has
User "1" --> "0..*" Feedback : submits
Comment "0..1" --> "0..*" Comment : replies

' --- Security ---
JwtAuthenticationFilter --> JwtService
CustomUserDetailsService --> UserService

@enduml